// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fetcher 200 OK! 1`] = `
{
  "body": [
    1,
    2,
    3,
  ],
  "ok": true,
  "status": 200,
  "statusText": "OK",
  "url": Any<URL>,
}
`;

exports[`Fetcher 200 empty content ala AWS lambda function URL 1`] = `
{
  "body": "",
  "ok": true,
  "status": 200,
  "statusText": "OK",
  "url": "http://0.0.0.0:39813/aws-lambda-200",
}
`;

exports[`Fetcher 204 1`] = `
{
  "body": null,
  "ok": true,
  "status": 204,
  "statusText": "No Content",
  "url": Any<URL>,
}
`;

exports[`Fetcher 204 empty content ala AWS lambda function URL 1`] = `
{
  "body": null,
  "ok": true,
  "status": 204,
  "statusText": "No Content",
  "url": "http://0.0.0.0:39813/aws-lambda-204",
}
`;

exports[`Fetcher 404 1`] = `
{
  "body": "<h1>Not Found</h1>",
  "ok": false,
  "status": 404,
  "statusText": "Not Found",
  "url": Any<URL>,
}
`;

exports[`Fetcher Custom options iso fetcher 1`] = `
{
  "body": {
    "accept": "*/*",
    "accept-encoding": "gzip, deflate",
    "accept-language": "*",
    "connection": "keep-alive",
    "host": "redacted",
    "sec-fetch-mode": "cors",
    "user-agent": "node",
    "x-fetcher": "custom",
  },
  "ok": true,
  "status": 200,
  "statusText": "OK",
  "url": Any<URL>,
}
`;

exports[`Fetcher JSON Error 1`] = `
{
  "body": {
    "code": 9,
    "message": "Data should be array",
    "status": "FAILED_PRECONDITION",
  },
  "ok": false,
  "status": 400,
  "statusText": "Bad Request",
  "url": Any<URL>,
}
`;
